Data views list layout: Fix action alignment (#62971)

--- a/packages/dataviews/src/style.scss
+++ b/packages/dataviews/src/style.scss
@@ -448,7 +448,7 @@
 		&.is-hovered,
 		&:focus-within {
 			.dataviews-view-list__item-actions {
-				padding-right: $grid-unit-40;
+				padding-right: $grid-unit-30;
 
 				.components-button {
 					opacity: 1;
